fixed element shifting on md screens

--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -3,6 +3,7 @@ body {
   font-family: Roboto, sans-serif;
   background-color: $bg-main;
   color: $bg-text;
+  overflow-x: hidden;
 }
 
 button {
